typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity15.ts.stderr
error: Cannot assign to this
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserGreaterThanTokenAmbiguity15.ts:1:1
  |
1 | 1 
  | ^

